--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "aos": "^2.3.4", 
+    "@splidejs/react-splide": "^0.7.12",
+    "aos": "^2.3.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "next": "13.2.4",
